--- a/package.json
+++ b/package.json
@@ -6,9 +6,22 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "axios": "^0.21.1",
+    "emailjs-com": "^2.6.4",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-alice-carousel": "^2.4.0",
+    "react-awesome-slider": "^4.1.0",
+    "react-dom": "^17.0.1",
+    "react-quill": "^1.3.5",
+    "react-recaptcha": "^2.3.10",
+    "react-responsive-carousel": "^3.2.18",
+    "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.0",
     "react-scripts": "4.0.3",
+    "react-simple-image-slider": "^2.1.0",
+    "react-slideshow-image": "^3.4.6",
+    "styled-components": "^5.2.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
